# monadclaw

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
apps/server/: Cargo.toml
apps/server/src/: main.rs
crates/agent/: Cargo.toml
crates/agent/src/: error.rs  lib.rs  session.rs  workspace.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  state.rs
crates/api/src/middleware/: auth.rs
crates/api/src/routes/: auth.rs  chat.rs  mod.rs  status.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: agents.ts  auth.ts  channels.ts  chat.ts  client.ts  config.ts  cron.ts  logs.ts  mock.ts  sessions.ts  skills.ts  status.ts  usage.ts
dashboard/src/components/: AuthGuard.tsx
dashboard/src/components/layout/: Shell.tsx  Sidebar.css  Sidebar.tsx  Topbar.css  Topbar.tsx
dashboard/src/components/ui/: Badge.css  Badge.tsx  Button.css  Button.tsx  Card.css  Card.tsx
dashboard/src/hooks/: useChat.test.ts  useChat.ts  useLogs.ts  useStatus.ts
dashboard/src/pages/: AgentsPage.tsx  ChannelsPage.tsx  ChatPage.css  ChatPage.tsx  ConfigPage.tsx  CronPage.tsx  LoginPage.css  LoginPage.tsx  LogsPage.css  LogsPage.tsx  OverviewPage.css  OverviewPage.tsx  SessionsPage.tsx  SkillsPage.tsx  UsagePage.tsx
dashboard/src/store/: authStore.ts  uiStore.ts
dashboard/src/styles/: base.css  layout.css  tokens.css
dashboard/src/test/api/: client.test.ts
dashboard/src/test/components/: Sidebar.test.tsx  Topbar.test.tsx
dashboard/src/test/pages/: ChatPage.test.tsx  OverviewPage.test.tsx
dashboard/src/types/: api.ts
docs/: auth.md  backend.md  frontend.md
docs/conventions/: api.md  architecture.md  frontend.md  security.md
docs/features/: workspace.md
docs/i18n/: README.fr.md  README.zh.md
docs/plans/: 2026-03-10-dashboard-implementation.md
docs/specs/: phase-1-session-persistence.md  phase-2-tool-execution.md  phase-3-discord-bot.md  phase-4-long-term-memory.md
docs/superpowers/plans/: 2026-03-10-dashboard-design.md  2026-03-11-rust-backend.md  2026-03-16-auth.md  2026-03-17-roadmap.md
docs/superpowers/specs/: 2026-03-11-rust-backend-design.md
web/: index.md
web/.vitepress/: config.ts
web/guide/: index.md
