[workspace]
members = [
  "apps/server",
  "crates/api",
  "crates/chat",
  "crates/config",
  "crates/providers",
]
resolver = "2"

[workspace.package]
edition      = "2024"
license      = "MIT"
version      = "0.1.0"

[workspace.lints.rust]
unused_qualifications = "deny"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[workspace.dependencies]
# Async runtime
tokio = { features = ["full"], version = "1" }
# HTTP server
axum       = { features = ["macros"], version = "0.8" }
axum-extra = "0.10"
# Serialization
serde      = { features = ["derive"], version = "1" }
serde_json = "1"
# Error handling
anyhow    = "1"
thiserror = "2"
# Config formats
toml = "0.8"
# LLM
genai = "0.5"
# Logging
tracing            = "0.1"
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
# Async utilities
async-stream = "0.3"
futures      = "0.3"
tokio-stream = "0.1"
# Filesystem
directories = "6"

# Workspace crates
monadclaw-api       = { path = "crates/api" }
monadclaw-chat      = { path = "crates/chat" }
monadclaw-config    = { path = "crates/config" }
monadclaw-providers = { path = "crates/providers" }
