[package]
edition.workspace = true
name              = "monadclaw-server"
version.workspace = true

[[bin]]
name = "monadclaw"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
axum               = { workspace = true }
monadclaw-api      = { workspace = true }
monadclaw-config   = { workspace = true }
tokio              = { workspace = true }
tower-http         = { version = "0.6", features = ["cors"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
