[package]
edition.workspace = true
name              = "monadclaw-agent"
version.workspace = true

[dependencies]
futures             = { workspace = true }
monadclaw-chat      = { workspace = true }
monadclaw-providers = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
async-stream = { workspace = true }
tempfile     = "3"
tokio        = { features = ["full"], workspace = true }
tokio-stream = { workspace = true }

[lints]
workspace = true
