[package]
edition.workspace = true
name              = "monadclaw-api"
version.workspace = true

[dependencies]
anyhow              = { workspace = true }
axum                = { workspace = true }
futures             = { workspace = true }
monadclaw-chat      = { workspace = true }
monadclaw-config    = { workspace = true }
monadclaw-providers = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
thiserror           = { workspace = true }
tokio               = { workspace = true }
tokio-stream        = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
axum-test = "19"
tokio     = { features = ["full"], workspace = true }

[lints]
workspace = true
