[package]
edition.workspace = true
name              = "monadclaw-config"
version.workspace = true

[dependencies]
directories = { workspace = true }
serde       = { workspace = true }
shellexpand = { workspace = true }
thiserror   = { workspace = true }
toml        = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
