[package]
edition.workspace = true
name              = "monadclaw-providers"
version.workspace = true

[dependencies]
anyhow           = { workspace = true }
async-stream     = { workspace = true }
futures          = { workspace = true }
genai            = { workspace = true }
monadclaw-chat   = { workspace = true }
monadclaw-config = { workspace = true }
tokio-stream     = { workspace = true }
tracing          = { workspace = true }

[lints]
workspace = true
